# qywx-py

./: .gitignore  README.md  main.py  message.py  pyproject.toml  requirements.txt
qywx-client/: http-client.py
qywx_client/: __init__.py  build_client.py
qywx_client/api/: __init__.py  address_book.py  media.py  send_message.py
qywx_client/client/: http_client.py
tests/address_book/: user_test.py
tests/message/: send_msg.py
